Create assembly in build actions

--- a/.github/workflows/BuildWin.yml
+++ b/.github/workflows/BuildWin.yml
@@ -19,7 +19,7 @@ jobs:
         cache: 'sbt'
 
     - name: Build
-      run: sbt build
+      run: sbt assembly
 
     - name: Test
       run: sbt test
