--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -21,7 +21,7 @@ jobs:
         cache: 'sbt'
 
     - name: Build
-      run: sbt build
+      run: sbt assembly
 
     - name: Test
       run: sbt test
