--- a/.github/workflows/BuildWin.yml
+++ b/.github/workflows/BuildWin.yml
@@ -18,8 +18,15 @@ jobs:
         java-version: 8
         cache: 'sbt'
 
-    - name: Build
-      run: sbt assembly
+    - name: apex-ls-checkout
+      uses: actions/checkout@v2
+      with:
+        repository: apex-dev-tools/apex-ls
+        path: './apex-ls'
+
+    - name: apex-ls-compile
+      working-directory: './apex-ls'
+      run: sbt publishLocal
 
     - name: Test
       run: sbt test
